# claco

./: README.md  chat.py  config.py  pyproject.toml  sender.py  server.py
src/claco/: __init__.py  _server.py  chat.py  comm.py  config.py  msg.py  receiver.py  sender.py  server.py
src/claco/queue/: __init__.py  base.py  claude.py
src/claco/sender/: __init__.py  base.py  claude.py
src/clako/: chat.py  receiver.py  server.py
