[project]
name = "claco"
version = "0.6.3"
description = "cli tools for \"Claude for Desktop\""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
chat = "claco.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claco"]
